test/Fail/RewritePragmaSuffix.agda
-- Andreas, 2024-08-12

{-# REWRITE Set1 #-}

-- Was: internal error
-- Expected error:
-- REWRITE used on name with suffix
